# AdvancedProgramming1

./: .classpath  .project  AiPlayer.cpp  AiPlayer.h  Board.cpp  Board.h  CMakeLists.txt  EnumDeclration.h  GameFlow.cpp  GameFlow.h  LogicInterface.h  PlayerInterface.h  RegularLogic.cpp  RegularLogic.h  Settings.txt  Slot.cpp  Slot.h  SlotWithRank.cpp  SlotWithRank.h  TerminalPlayer.cpp  TerminalPlayer.h  main.cpp
ex3/: log.txt
ex3/gtest_src/: .project
ex3/src/: Board.cpp  GameFlow.cpp  TerminalPlayer.cpp
ex3/test/: TestManager.cpp  test-all.cpp
ex4/Debug/: ex4  makefile  sources.mk
ex4/Debug/gtest_src/: gtest-all.d  subdir.mk
ex4/Debug/src/: AiPlayer.d  Board.d  GameFlow.d  RegularLogic.d  Slot.d  SlotWithRank.d  TerminalPlayer.d  main.d  subdir.mk
ex4/Debug/src/client/gtest_src/: gtest-all.d  subdir.mk
ex4/Debug/src/client/src/: AiPlayer.d  Board.d  GameFlow.d  HostPlayer.d  RegularLogic.d  Slot.d  SlotWithRank.d  TerminalPlayer.d  main.d  subdir.mk
ex4/Debug/src/client/test/: TestManager.d  subdir.mk  test-all.d
ex4/Debug/src/server/: Server.d  subdir.mk
ex4/Debug/test/: TestManager.d  subdir.mk  test-all.d
ex4/etc/: info.txt  log.txt
ex4/exe/: client.out
ex4/src/client/: a.out  makefile
ex4/src/client/include/: AiPlayer.h  Board.h  GameFlow.h  HostPlayer.h  LogicInterface.h  PlayerInterface.h  RegularLogic.h  Slot.h  SlotWithRank.h  TerminalPlayer.h
ex4/src/client/src/: AiPlayer.cpp  Board.cpp  GameFlow.cpp  HostPlayer.cpp  RegularLogic.cpp  Slot.cpp  TerminalPlayer.cpp  main.cpp
ex4/src/client/test/: AdvanceTestGame.h  TestClassicLogic.h
ex4/src/server/: Server.cpp  Server.h  a.out  main.cpp  makefile
ex5/client/: a.out
ex5/client/include/: AiPlayer.h  EnumDeclration.h  HostPlayer.h  LogicInterface.h  PlayerInterface.h  RegularLogic.h  Slot.h  TerminalPlayer.h
ex5/client/src/: AiPlayer.cpp  GameFlow.cpp  HostPlayer.cpp  PrintGames.cpp  RegularLogic.cpp  Slot.cpp  TerminalPlayer.cpp  main.cpp
ex5/client/test/: test-all.cpp
ex5/server/: a.out  makefile
ex5/server/include/: CloseGame.h  CommandInfo.h  CommandManager.cpp  CommandManager.h  CommandProtocol.h  GameControl.h  GameControll.cpp  GameControll.h  JoinToGame.h  PlayMove.h  PrintGames.h  Server.h  StartNewGame.h
ex5/server/src/: CloseGame.cpp  CommandManager.cpp  GameControl.cpp  JoinToGame.cpp  PlayMove.cpp  PrintGames.cpp  Server.cpp  StartNewGame.cpp  main.cpp
ex5/server/src/backup server/: Server.h
ex6/etc/: log.txt
ex6/src/client/include/: Board.h  TerminalPlayer.h
ex6/src/client/src/: AiPlayer.cpp  main.cpp
ex6/src/server/: makefile
ex6GUI/src/: GameBoardController.java  Logic.java  Menu.fxml  Player.java  SettingsController.java  TerminalPlayer.java
ex6Java/: Board.java  Game.fxml  GameBoardController.java  GameFlow.java  Logic.java  Menu.fxml  Player.java  RegularLogic.java  Settings.fxml  SettingsController.java  Slot.java  TerminalPlayer.java  main.java
ex6Java/etc/: log.txt  readme.rtf
ex6Java/src/App/: Board.java  CellStatus.java  ExtraCellValidateResult.java  GameFlow.java  Logic.java  Operation.java  Player.java  RegularLogic.java  Slot.java  TerminalPlayer.java
ex6Java/src/GUI/: DeclareWinnerController.java  GUI.java  GameBoardController.java  GameController.java  Main.java  Menu.fxml  MenuController.java  ScenesCallerUtility.java  SettingsController.java
ex6end/: Settings.txt
ex6end/etc/: info.txt
ex6end/src/: Board.java  CellStatus.java  DeclareWinner.fxml  GUI.java  Game.fxml  GameBoardController.java  GameController.java  GameFlow.java  Logic.java  Main.java  MenuController.java  Player.java  RegularLogic.java  ScenesCallerUtility.java  Settings.fxml  SettingsController.java  Slot.java  TerminalPlayer.java
ex6yana/src/: Board.java  CellStatus.java  DeclareWinner.fxml  DeclareWinnerController.java  ExtraCellValidateResult.java  GUI.java  GameBoardController.java  GameController.java  GameFlow.java  Main.java  MenuController.java  Operation.java  Player.java  Regular.java  RegularLogic.java  ScenesCallerUtility.java  SettingsController.java  TerminalPlayer.java
ex7/etc/: log.txt
ex7/src/client/: makefile
ex7/src/client/include/: AiPlayer.h  Slot.h
ex7/src/client/src/: Board.cpp  HostPlayer.cpp  Slot.cpp  TerminalPlayer.cpp
ex7/src/client/test/: TestAiPlayer.h  TestManager.cpp
ex7/src/server/include/: Server.h  Task.h  ThreadPool.h
ex7/src/server/src/: Server.cpp  ThreadPool.cpp
include/: AiPlayer.h  Board.h  EnumDeclration.h  GameFlow.h  LogicInterface.h  PlayerInterface.h  RegularLogic.h  Slot.h  SlotWithRank.h  TerminalPlayer.h
src/: AiPlayer.cpp  Board.cpp  GameFlow.cpp  RegularLogic.cpp  Slot.cpp  SlotWithRank.cpp  TerminalPlayer.cpp  main.cpp
test/: AdvanceTestGame.h  TestAiPlayer.h  TestClassicLogic.h  TestManager.cpp  test-all.cpp  test_classic_logic.h  test_player_Ai.h
